# Pato

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
pato/: cli.py
src/pato/: cli.py
