[project]
name = "pato"
version = "0.1.1"
description = "In-memory DuckDB SQL server for querying and transforming data files"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Kevin Smeeks", email = "ksmeeks0001@gmail.com" }
]
dependencies = [
    "duckdb>=1.4.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
]

[project.scripts]
pato = "pato.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"